--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,7 @@ html {
 }
 
 section {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    height: 100%;
     padding: 20px 0;
     opacity: 0;
     transform: translateY(20px);
@@ -39,6 +36,12 @@ header nav a {
     font-weight: bold;
 }
 
+header nav a:hover {
+    color: gray;
+    border-bottom: 1px solid gray;
+
+}
+
 footer {
     width: 100%;
     background: yellow;
@@ -54,33 +57,76 @@ footer nav a {
     font-weight: bold;
 }
 
+footer nav a:hover {
+    color: gray;
+    border-bottom: 1px solid gray;
+
+}
+
 .subTitle {
-    align-self: flex-start;
-    margin-left: 20px;
+    margin: 20px 0 20px 40px;
+    font-size: 36px;
 }
 
 #top {
-    background: url('../img/Top.png') no-repeat center center;
+    height: 100vh;
     position: relative;
+    overflow: hidden;
+}
+
+.top-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* 画像を縦横比を保ってカバー */
+    z-index: -1;
+    /* タイトルを前面に表示するために後ろに下げる */
 }
 
 .top-title {
     position: absolute;
     top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
+    color: white;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.top-title h1 {
+    font-size: 60px;
+    margin-bottom: 20px;
+}
+
+/* #data {
+    display: flex;
+    align-items: flex-start;
+} */
+
+#data p {
+    margin-left: 40px;
 }
 
 #news {
     background: rgb(255, 252, 153);
     height: auto;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    padding: 0;
+    border-top: 2px solid rgb(255, 247, 0);
+    border-bottom: 2px solid rgb(255, 247, 0);
 }
 
 #news a {
     color: #222;
     text-decoration: none;
+}
+
+#news ul {
+    padding: 0;
+    margin: 0;
 }
 
 #news li {
@@ -94,19 +140,40 @@ footer nav a {
 
 .news-content02 {
     width: 100%;
+    border-left: 2px solid rgb(255, 247, 0);
 }
 
 .news-tr {
-    /*height: 100px;*/
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
     display: flex;
     align-items: center;
     background: #fff;
-    border: 1px solid rgb(255, 247, 0);
+    border: 2px solid rgb(255, 247, 0);
     transition: background 0.3s ease;
 }
 
-.news-tr:hover {
+.news-tr::after {
     background: rgb(255, 247, 0);
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 100%;
+    transform: scale(0, 1);
+    transform-origin: left top;
+    transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
+    z-index: -1;
+}
+
+.news-tr:hover {
+    color: #ff701e;
+}
+
+.news-tr:hover::after {
+    transform: scale(1, 1);
 }
 
 .news-tr div {
@@ -114,7 +181,7 @@ footer nav a {
 }
 
 .news-td-date {
-    width: 150px;
+    width: 100px;
 }
 
 .news-td-title {
@@ -126,7 +193,7 @@ footer nav a {
 }
 
 .news-td-more {
-    width: 150px;
+    width: 60px;
 }
 
 .news-td-img div {
@@ -135,81 +202,174 @@ footer nav a {
     background: gray;
 }
 
-
 #about {
     background: rgb(255, 247, 0);
     width: 100%;
-}
-
-#about .content {
     display: flex;
 }
 
-#about .content div {
-    flex: 1;
-    padding: 20px;
+#about .content {
+    width: 50%;
+}
+
+#about .left p {
+    padding-left: 40px;
 }
 
 #about .content .placeholder {
-    width: 50%;
-    height: 300px;
+    width: 100%;
+    height: 600px;
     background: gray;
+}
+
+#about a {
+    color: #000;
+    float: right;
+    padding: 5px 10px;
+    margin: 0 10px;
+    border-radius: 5px;
+}
+
+#about a:hover {
+    color: #ff701e;
+    background: #fff;
 }
 
 #service {
     width: 100%;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 #service .content {
+    width: 100%;
+    text-align: left;
+}
+
+#service .left p {
+    padding-left: 40px;
+}
+
+#service .left a {
+    color: #000;
+    float: right;
+    padding: 5px 10px;
+    margin: 0 10px;
+    border-radius: 5px;
+}
+
+#service .left a:hover {
+    color: #fff;
+    background: #ff701e;
+}
+
+.service-items {
     display: flex;
     justify-content: space-around;
 }
 
-#service .content div {
-    writing-mode: vertical-rl;
-    border: 2px solid black;
-    padding: 10px;
-    width: 80px;
-    height: 300px;
+.service-item {
+    position: relative;
+    color: #fff;
+    width: 130px;
+    height: 400px;
     overflow: hidden;
-    transition: width 0.3s ease;
-    cursor: pointer;
+    transition: width 0.5s ease;
 }
 
-#service .content div .detail {
+.service-title {
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    position: absolute;
+}
+
+.service-title h4 {
+    padding: 20px 5px;
+    margin: 0;
+    font-size: 32px;
+}
+
+.service-detail {
+    display: none;
+    position: absolute;
+    background: #ff701e;
+    text-align: left;
+    left: 0;
+    bottom: 0;
+    padding: 5px 10px;
+}
+
+.service-detail p,
+.service-detail h4 {
+    padding: 0;
+    margin: 0;
+}
+
+.service-detail h4 {
+    font-size: 28px;
+}
+
+.service-detail a {
+    color: #fff;
+    float: right;
+    padding: 5px 10px;
+    margin: 0;
+    border-radius: 5px;
+}
+
+.service-detail a:hover {
+    color: #ff701e;
+    background: #fff;
+}
+
+
+.service-item:hover {
+    width: 300px;
+}
+
+.service-item:hover .service-title {
     display: none;
 }
 
-#service .content div:hover {
-    width: 240px;
+.service-item:hover .service-detail {
+    display: block;
 }
 
-#service .content div:hover .detail {
-    display: block;
+.service-image {
+    width: 200px;
+    height: 100%;
+    background-color: gray;
+    margin-bottom: 10px;
+    flex-shrink: 0;
+}
+
+.service-img1 {
+    background: url('../img/Top.png') no-repeat center center;
+}
+
+.service-img2 {
+    background: url('../img/tsuchi01.jpg') no-repeat center center;
 }
 
 #furture {
     background: rgb(255, 252, 153);
 }
 
-#furture .content {
+#furture .content1 {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.furture-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+.furture-item-left {
     text-align: center;
-    margin: 20px 0;
+    padding: 10px 0;
 }
 
-.furture-item p {
-    display: inline-block;
-    margin: 0 10px;
+.furture-item-right {
+    padding-left: 40px;
 }
 
 .arrow {
@@ -217,29 +377,143 @@ footer nav a {
     margin-top: 10px;
 }
 
+#furture .content2 {
+    padding: 20px 0;
+}
+
+#furture .content2 a {
+    color: #000;
+    float: right;
+    padding: 5px 10px;
+    margin: 0 10px;
+    border-radius: 5px;
+}
+
+#furture a:hover {
+    color: #fff;
+    background: #ff701e;
+}
+
 #topics {
     background: rgb(255, 247, 0);
 }
 
-#topics .content {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 10px;
-}
-
-#topics .content .item {
-    text-align: center;
+.slider-wrapper {
     align-items: center;
-    justify-content: center;
+    padding: 10px;
+    margin: 0 auto;
+    position: relative;
+    width: 100%;
+    max-width: 900px;
+    overflow: hidden;
+    height: 400px;
 }
 
-.item-img {
-    width: 150px;
-    height: 150px;
-    background: lightgray;
+.slider-container {
+    display: flex;
+    transition: transform 0.5s ease;
+    width: fit-content;
 }
 
-#company {
+.slide {
+    width: 200px;
+    height: 100%;
+    margin-right: 10px;
+}
+
+.img {
+    width: 200px;
+    height: 145px;
+    border-radius: 10px;
+}
+
+/* 擬似画像に色をつける */
+.fake-img1 {
+    background: #ff6666;
+}
+
+.fake-img2 {
+    background: #ff9999;
+}
+
+.fake-img3 {
+    background: #66ccff;
+}
+
+.fake-img4 {
+    background: #99ddff;
+}
+
+.fake-img5 {
+    background: #66ff66;
+}
+
+.fake-img6 {
+    background: #99ff99;
+}
+
+.fake-img7 {
+    background: #cc66ff;
+}
+
+.fake-img8 {
+    background: #dd99ff;
+}
+
+.slide-item {
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+}
+
+.slide-item a {
+    color:#000;
+    text-decoration: none;
+    transition: transform 0.3s ease;
+}
+
+.slide-item a:hover{
+    transform: scale(1.05, 1.05);
+}
+
+/* .slide-item a:hover .imag-label{
+    background: gray;
+    border-radius: 4px;
+} */
+
+.imag-label {
     text-align: center;
+    font-size: 14px;
+    padding: 4px 0;
+    color: #333;
+}
+
+.imag-nav {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 5;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+.slide-prev {
+    left: 10px;
+}
+
+.slide-next {
+    right: 10px;
+}
+
+/* #company {
+    text-align: center;
+} */
+
+#company p {
+    margin-left: 40px;
 }
